k8s/argoCD/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"  # Disable HTTPS redirection
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"  # Use HTTP
spec:
  ingressClassName: nginx
  rules:
  - host: k8s-multi-demo.argocd
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
